<resources>
    <string name="app_name">Habari</string>
    <string name="https_newsapi_org_n_https_square_github_io_retrofit_n_https_material_io_design_n_http_www_ocpsoft_org_prettytime">https://newsapi.org \n\n Made by \n\n  Vinayaka.H.K. \n Sampreeth Kabadi</string>
    <string name="description">Description</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="register">Register</string>
    <string name="sign_in">SIGN IN</string>
    <string name="news_app_register">Habari | Register</string>
    <string name="news_app_login">Habari | Login</string>
    <string name="habari">HABARI</string>
    <string name="search">Search</string>
    <string name="skip">skip</string>
    <string name="description_logo">Habari Logo</string>
    <string name="title_activity_navigation_drawer">Navigation_Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">Home</string>
</resources>