<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/news"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/g_bold"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:padding="10dp"
        android:text="@string/news_app_register"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/g_light"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:hint="@string/user_name"
        android:layout_marginTop="50dp"
        android:layout_below="@id/news_title"

        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/g_light"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:hint="@string/password"
        android:layout_marginTop="50dp"
        android:layout_below="@id/username"
        />
    <EditText
        android:id="@+id/repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/g_light"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:padding="10dp"
        android:hint="@string/retype_password"
        android:layout_marginTop="50dp"
        android:layout_below="@id/password"
        />


    <LinearLayout
        android:id="@+id/btnlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repass"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="50dp"
            android:layout_height="fill_parent"

            android:layout_weight="1.0"
            android:fontFamily="@font/g_bold"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1.0"
            android:fontFamily="@font/g_bold"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

    </LinearLayout>

    <Button
        android:id="@+id/btnskip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/skip"
        android:fontFamily="@font/g_bold"
        android:padding="10dp"
        android:textColor="@color/black"
        />
</RelativeLayout>